# SHU_CourseRush

./: .coverage  .gitignore  .pdm-python  README.md  config.template.toml  config.toml  hello.py  invalid_config.toml  main.py  pyproject.toml
tests/: config_test.py  test_main.py
